[tool.poetry]
name = "pubmed-paper-fetcher-sahil"
version = "1.0.1"
description = ""
authors = ["sahilssssss <deysagar3001@gmil.com>"]
readme = "README.md"
packages = [{include = "pubmed_paper_fetcher", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
tqdm = ">=4.67.1,<5.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
